[tool.pdm]

[project]
name = "aworda-rainsor"
version = "0.0.1rc0"
description = ""
authors = [
    {name = "LinNian", email = "crynian@outlook.com"},
]
dependencies = [
    "black>=23.1.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
